--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
         <div class="half-width bio">
             <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus totam hic architecto repellat. Minus
-                exercitationem consectetur dolore nostrum doloribus quas, totam quaerat corrupti porro blanditiis sequi,
-                non recusandae, alias quo dolor placeat facere laborum cumque voluptates quis quia adipisci soluta?</p>
+            <p>Hi,I am Rana,I have great passion about cooking,So I start a resturant where u can order and eat food.I
+                can assure you that the food will be healthy and tasty.Your health in our hand and we give u the best
+                food. </p>
             <a class="button" href="https://www.facebook.com/profile.php?id=100007527794982">
                 Contact Me!</a>
 
@@ -49,26 +49,26 @@
     </section>
     <section>
         <div class="header-p-alignment">
-            <h1>My recipy</h1>
+            <h1>My Recipie</h1>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, consequuntur perferendis fugiat modi
                 saepe ea neque voluptate distinctio! Fugit, voluptates.</P>
         </div>
         <div class="flexible-container">
             <div class="one-third">
                 <img src="images/food/Project Cover.jpg" alt="">
-                <h3>Recipi Title </h3>
+                <h3>Recipie Title </h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, omnis doloribus? Odit eius magni
                     aut?</p>
             </div>
             <div class="one-third">
                 <img src="images/food/Project Cover1.jpg" alt="">
-                <h3>Recipi Title </h3>
+                <h3>Recipie Title </h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, omnis doloribus? Odit eius magni
                     aut?</p>
             </div>
             <div class="one-third">
                 <img src="images/food/Project Cover.png" alt="">
-                <h3>Recipi Title </h3>
+                <h3>Recipie Title </h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, omnis doloribus? Odit eius magni
                     aut?</p>
             </div>
@@ -93,7 +93,7 @@
     </section>
     <section>
         <div class="media-part header-p-alignment email-part">
-            <h1>To contact with us you can email</h1>
+            <h2>To contact with us you can email</h2>
             <p>Gets updates</p>
             <input type="text" placeholder="please ask your question ?"><br>
 
@@ -104,7 +104,7 @@
     </section>
     <footer>
         <div class="header-p-alignment">
-            <h1><span>Food</span> Network</h1>
+            <h2><span>Food</span> Network</h2>
             <p>Eat healthy to live healthy.Live healthy to live happy.</p>
         </div>
     </footer>
